--- a/gtk/sass/4.0/_common.scss
+++ b/gtk/sass/4.0/_common.scss
@@ -2025,6 +2025,11 @@ headerbar {
     padding-bottom: rem(($widget_size - $icon_size - 2.7px) / 2);
 
     label { margin: rem(-2px) 0; }
+
+    > radio { // FIXME: for gnome-clocks
+      margin: unset;
+      padding: unset;
+    }
   }
 
   button,
@@ -2240,9 +2245,15 @@ headerbar {
       -gtk-outline-radius: 100px;
 
       &.text-button,
-      &.flat.selection-menu {
+      &.flat.selection-menu,
+      &.selection-menu.toggle.popup {
+        min-height: $icon_size;
+        padding-top: rem(($widget_size - $icon_size - 2.7px) / 2);
+        padding-bottom: rem(($widget_size - $icon_size - 2.7px) / 2);
         border-radius: 2px;
         -gtk-outline-radius: 2px;
+
+        label { margin: rem(-2px) 0; }
 
         &.image-button {
           border-radius: 100px;
